# amigo-secreto

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Teste.csv  compose.yml  db.sql  debug.go  go.mod  go.sum  justfile  mail.go  main.go
frontend/: Cargo.toml  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/routes/: +page.svelte
server/: .gitignore  Cargo.toml
server/migrations/2023-07-25-182918_add_jogos/: down.sql  up.sql
server/migrations/2023-07-25-182922_add_jogadores/: down.sql  up.sql
server/src/: lib.rs  main.rs  model.rs  schema.rs
src/: db.rs  email.rs  game_logic.rs  handlers.rs  jogo.rs  lib.rs  main.rs  pages.rs  participantes.rs  participants.rs  rng.rs  sorteio.rs
