[package]
name = "amigo-secreto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
csv = "1.3.0"
dotenvy = "0.15.7"
hashbrown = "0.14.1"
lettre = { version = "0.11.1", features = ["rustls-tls", "native-tls"] }
prettytable-rs = "0.10.0"
rand = "0.8.5"
rand_chacha = { version = "0.3.1", features = ["simd"] }
rand_seeder = "0.2.3"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive", "serde_derive"] }
serde_json = "1.0.107"
