[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.6"
log = "0.4.17"
sycamore = "0.8.2"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
