[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
clap = { version = "4.2.1", features = ["derive"] }
hyper = { version = "0.14.25", features = ["full"] }
log = "0.4.17"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
